@@ -11,6 +11,7 @@ A Spring Boot application for creating new appeals for SSCS appellants.
 - [Docker](#docker)
 - [Useful Commands](#useful-commands)
 - [Gotchas](#gotchas)
+- [Work Allocation](#work-allocation)
 
 ## Background
 
@@ -28,6 +29,41 @@ For versions and a complete list of dependencies, see `build.gradle`.
 ## Quick Start
 
 **NOTE:** If you haven't already connected to the HMCTS Azure environment through Azure CLI, you will need to do this. Please contact the development team for instructions.
+
+Add the following entries to your hosts file:
+
+```text
+127.0.0.1 host.docker.internal
+127.0.0.1 rse-idam-simulator
+127.0.0.1 dm-store
+```
+
+Set the following environment properties where the PDF_SERVICE_ACCESS_KEY and NOTIFICATION_API_TEST_KEY values are retrieved from az vault. The following code
+will generate the required key/value pairs.
+
+Note: 
+* Please log into azure before running (az login).
+* These must be available to the running service so can be added to .aat-env or your machines environent properties.
+
+```bash
+
+cat <<EOF
+PDF_SERVICE_ACCESS_KEY="$(az keyvault secret show --vault-name sscs-aat --name docmosis-api-key --query value -o tsv 2>/dev/null)"
+NOTIFICATION_API_TEST_KEY="$(az keyvault secret show --vault-name sscs-aat --name notification-test-key --query value -o tsv 2>/dev/null)"
+TESTING_SUPPORT_ENABLED="true"
+TEST_DOCUMENT_MANAGEMENT_URL="http://localhost:5005"
+TEST_URL="http://localhost:8008"
+JUDICIAL_REF_API_URL="http://localhost:8084"
+SEND_LETTER_SERVICE_BASEURL="http://localhost:8084"
+JOB_SCHEDULER_DB_PORT="6432"
+EOF
+```
+
+Add the following property to the .aat-env file
+
+```text
+JAVA_TOOL_OPTIONS="-Djava.locale.providers=COMPAT,CLDR"
+```
 
 1. **Build the application:**
    ```bash
@@ -112,7 +148,7 @@ Run all unit tests:
      System.getProperties().setProperty("pact.verifier.publishResults", "true");
      ```
 
-## Docker (Work in progress...)
+## Docker
 
 ### Build and Run with Docker
 
@@ -160,6 +196,50 @@ docker-compose up
 curl http://localhost:8008/health
 ```
 
+### CCD config generation
+You can generate a CCD configuration with `create-xlsx.sh`.
+
+Usage: `create-xlsx.sh [type] [version] [env] [wa_enabled] [like_prod] [shuttered]`. The parameters `type`, `version` and 
+`env` are always required. If not specified `wa_enabled` and `shuttered` will default to false and `like_prod` will 
+default to the value of `env`.
+
+Examples:
+```bash
+# Generate CCD config for local env
+./bin/create-xlsx.sh benefit dev local
+```
+```bash
+# Generate CCD config for demo with WA enabled
+./bin/create-xlsx.sh benefit dev demo true
+```
+```bash
+# Generate prod like CCD config for demo with WA turned off
+./bin/create-xlsx.sh benefit dev demo false prod
+```
+```bash
+# Generate shuttered, prod like CCD config for AAT with WA turned off
+./bin/create-xlsx.sh benefit dev aat false prod true
+```
+
+## Work allocation
+Work allocation can be enabled in lower environments. To generate the correct CCD configuration for this feature, 
+the script includes configuration files containing `-WA-` in their names and excludes those with `-nonWA` when WA is 
+enabled. Conversely, when WA is disabled, it includes configuration files with `-nonWA` and excludes those with `-WA-`.
+
+The `"Publish": "${CCD_DEF_PUBLISH}"` field is set dynamically to `"Y"` when WA is enabled and `"N"` when 
+it is disabled. This is used by CCD to publish the event to the message listener so the WA service will be able to process it.
+
+### Enabling WA
+To enable work allocation in preview, you only need to add the `pr-values:wa` label to your PR. 
+This will ensure that the work allocation service is started and configured correctly for the preview environment. 
+
+To enable WA in any other lower environment set both the application feature flag (`WORK_ALLOCATION_FEATURE` in 
+`cnp-flux-config` repo) and the CCD configuration flag (`WORK_ALLOCATION_FEATURE_ENABLED` in `Jenkinsfile_CNP`) for the 
+required environment to true.
+
+If some events are not triggering WA tasks, or are not being recognised by the WA service, double check that the 
+case-event.json entry for the event has the `Publish` field set to `"${CCD_DEF_PUBLISH}"`.
+
 ## Gotchas
 
 ### PRs Starting with "Bump"
@@ -181,3 +261,7 @@ To run the script, execute the following commands in the project root:
 ```bash
 chmod +x bin/create-idam-users.sh
 bin/create-idam-users.sh
+
+### Local DM Store Not Healthy (DOWN or UNKNOWN)
+If this is the first time that the container has been created then it may need to be restarted multiple times in order for it to come up successfully!
+
